--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
 </head>
 <body>
 <div id="impress">
-  <div id="bored" class="step slide" data-x="-1000" data-y="-1500">
+  <div id="bored" class="step slide" data-transition-duration="2000" data-x="-1000" data-y="-1500">
+    <img src="./img/Arcachon.JPG" alt="coucou" width="512" height="">
     <q>Hi Samira I could make love with you for ever <b>bored</b> with all those slides-based presentations?</q>
   </div>
 
-  <div class="step slide" data-x="0" data-y="-1500">
+  <div class="step slide" data-transition-duration="5000" data-x="0" data-y="-1500">
     <q>Don’t you think that presentations given <strong>in modern browsers</strong> shouldn’t <strong>copy the
         limits</strong> of ‘classic’ slide decks?</q>
   </div>
@@ -21,6 +22,7 @@
   <div class="step slide" data-x="1000" data-y="-1500">
     <q>Would you like to <strong>impress your audience</strong> with <strong>stunning visualization</strong> of your
       talk?</q>
+      <img src="img/forest.PNG" alt="fuck yourself" width=100% >
   </div>
 
   <div id="title" class="step" data-x="0" data-y="0" data-scale="4">
@@ -78,7 +80,7 @@
   <p>Use a spacebar or arrow keys to navigate</p>
 </div>
 
-  <script src='./node_modules/impress.js/js/impress.min.js'></script>
+  <script src='impress.js'></script>
   <script src='test-impress.js'></script>
 </body>
 </html>
