--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </div>
 
   <div class="step slide" data-transition-duration="5000" data-x="0" data-y="-1500">
-    <q>Don’t you think that presentations given <strong>in modern browsers</strong> shouldn’t <strong>copy the
+    <q>Don’t you think that ifhejfhfkhfekjfhf given <strong>in modern browsers</strong> shouldn’t <strong>copy the
         limits</strong> of ‘classic’ slide decks?</q>
   </div>
 
