--- a/index.html
+++ b/index.html
@@ -9,71 +9,58 @@
 </head>
 <body>
 <div id="impress">
-  <div id="bored" class="step slide" data-transition-duration="2000" data-x="-1000" data-y="-1500">
-    <img src="./img/Arcachon.JPG" alt="coucou" width="512" height="">
-    <q>Hi Samira I could make love with you for ever <b>bored</b> with all those slides-based presentations?</q>
+  <div id="bored" class="step slide" data-transition-duration="1000" data-x="-1000" data-y="-1500">
+    <q>Hello Wiebe and Rembert</q>
+      <q>this weekend, I <b>played</b> a lot with html code to see how we can make new styles of presentation </q>
   </div>
 
-  <div class="step slide" data-transition-duration="5000" data-x="0" data-y="-1500">
-    <q>Don’t you think that ifhejfhfkhfekjfhf given <strong>in modern browsers</strong> shouldn’t <strong>copy the
-        limits</strong> of ‘classic’ slide decks?</q>
+  <div class="step slide" data-transition-duration="1000" data-x="0" data-y="-1500">
+    <q>Even though it was very <strong>amusing</strong> <br/> I have to admit that it takes a lot of time and J-M's time 
+       </q>
   </div>
 
-  <div class="step slide" data-x="1000" data-y="-1500">
-    <q>Would you like to <strong>impress your audience</strong> with <strong>stunning visualization</strong> of your
-      talk?</q>
-      <img src="img/forest.PNG" alt="fuck yourself" width=100% >
+  <div class="step slide" data-x="1000" data-y="-1500" >
+    <q>But it can inspire us to think differently and to unlock and imagine  new roads</q>
+      <img src="img/forest.PNG" alt="a forest" width=100% height=50%>
   </div>
 
   <div id="title" class="step" data-x="0" data-y="0" data-scale="4">
-    <span class="try">then you should try</span>
+    <span class="try">we should definitely try</span>
     <h1>impress.js<sup>*</sup></h1>
-    <span class="footnote"><sup>*</sup> no rhyme intended</span>
+    
   </div>
 
   <div id="its" class="step" data-x="850" data-y="3000" data-rotate="90" data-scale="5">
     <p>It’s a <strong>presentation tool</strong> <br />
       inspired by the idea behind <a href="http://prezi.com">prezi.com</a> <br />
-      and based on the <strong>power of CSS3 transforms and transitions</strong> in modern browsers.</p>
+     
+  </div>
+  <div id="ing" class="step" data-x="3500" data-y="-850" data-rotate="180" data-scale="6">
+    <p>it can <b class="positioning">position</b>, <b class="rotating">rotate</b> and <b class="scaling">scale</b>
+      words on an infinite canvas.</p>
+      <p> Kind of mathematically</p>
   </div>
 
-  <div id="big" class="step" data-x="3500" data-y="2100" data-rotate="180" data-scale="6">
-    <p>visualize your <b>big</b> <span class="thoughts">thoughts</span></p>
+  <div id="big" class="step" data-x="3500" data-y="2100" data-rotate="270" data-scale="6">
+    <p>That's why I think it's useless to convert powerpoint to this or any other format for the 8th
+      as it's a different way of thinking presentation 
   </div>
 
   <div id="tiny" class="step" data-x="2825" data-y="2325" data-z="-3000" data-rotate="300" data-scale="1">
-    <p>and <b>tiny</b> ideas</p>
-  </div>
-
-  <div id="ing" class="step" data-x="3500" data-y="-850" data-rotate="270" data-scale="6">
-    <p>by <b class="positioning">positioning</b>, <b class="rotating">rotating</b> and <b class="scaling">scaling</b>
-      them on an infinite canvas</p>
-  </div>
-
-  <div id="imagination" class="step" data-x="6700" data-y="-300" data-scale="6">
-    <p>the only <b>limit</b> is your <b class="imagination">imagination</b></p>
-  </div>
-
-  <div id="source" class="step" data-x="6300" data-y="2000" data-rotate="20" data-scale="4">
-    <p>want to know more?</p>
-    <q><a href="http://github.com/bartaz/impress.js">use the source</a>, Luke!</q>
-  </div>
-
-  <div id="one-more-thing" class="step" data-x="6000" data-y="4000" data-scale="2">
-    <p>one more thing...</p>
+    <p> <b class="positioning">but</b></p>
+      <p> We can try it in a small group in future </p>
   </div>
 
 
   <div id="its-in-3d" class="step" data-x="6200" data-y="4300" data-z="-100" data-rotate-x="-40" data-rotate-y="10"
     data-scale="2">
-    <p><span class="have">have</span> <span class="you">you</span> <span class="noticed">noticed</span> <span
-        class="its">it’s</span> <span class="in">in</span> <b>3D<sup>*</sup></b>?</p>
-    <span class="footnote">* beat that, prezi ;)</span>
+    <p> Let's use libre or ppt this time and we will beat it for the next presentations</p>
   </div>
 
   <div id="overview" class="step" data-x="3000" data-y="1500" data-scale="10">
   </div>
 
+  
 </div>
 
 <div class="hint">
